Rocchio part 5 modularize the code into functions

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +218,7 @@
     "num_concepts = 100\n",
     "# step 1 import old lyrical data into a dataframe.\n",
     "lyric_df = pd.read_csv(practice_data_path)\n",
+    "# drop latin songs to avoid negatively impacting performance using 2 languages\n",
     "lyric_df = lyric_df[lyric_df['genre'] != 'latin']\n",
     "lyric_df = lyric_df[['track_name_x', 'artist_name_x', 'track_id','lyric_raw']]\n",
     "lyric_df.rename(columns={\n",
@@ -343,18 +344,192 @@
     "        meanVectDict[i] = 0\n",
     "\n",
     "# calcualte the new query vector by summing all of the mean vectors together\n",
-    "newQueryVec = alpha*userLsi + beta * meanVectDict[2] - gamma * meanVectDict[1] + phi * meanVectDict[0]\n",
-    "\n",
-    "        \n"
+    "newQueryVec = alpha*userLsi + beta * meanVectDict[2] - gamma * meanVectDict[1] + phi * meanVectDict[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# STEP 5 convert the notebook into functions and create a loop!"
+    "# STEP 5 convert the notebook into functions.\n",
+    "def load_lyrics_data():\n",
+    "    \"\"\"\n",
+    "    return a dataframe with cleaned lyrics\n",
+    "    \"\"\"\n",
+    "    temp_path = os.getcwd()\n",
+    "    root_path = temp_path.split('/napster_2')[0]\n",
+    "    repo_path = '/napster_2/lyric_genius_api/practice_data.csv'\n",
+    "    data_path = root_path + repo_path\n",
+    "    # step 1 import old lyrical data into a dataframe.\n",
+    "    lyric_df = pd.read_csv(data_path)\n",
+    "    # drop latin songs to avoid negatively impacting performance using 2 languages\n",
+    "    lyric_df = lyric_df[lyric_df['genre'] != 'latin']\n",
+    "    lyric_df = lyric_df[['track_name_x', 'artist_name_x', 'track_id','lyric_raw']]\n",
+    "    lyric_df.rename(columns={\n",
+    "        'track_name_x': 'track_name',\n",
+    "        'artist_name_x': 'artist_name'\n",
+    "    }, inplace=True)\n",
+    "    lyric_df = lyric_df.dropna()\n",
+    "    # replace new line character\n",
+    "    lyric_df['lyric_raw'].replace('\\n', ' ',regex=True, inplace=True)\n",
+    "    # remove embed text from lyric genius API\n",
+    "    lyric_df['lyric_raw'].replace('[0-9]{1,3}Embed', '', regex=True, inplace=True)\n",
+    "    return lyric_df\n",
+    "\n",
+    "def create_lyric_tfidf(lyric_df, min_df):\n",
+    "    \"\"\" \n",
+    "    Create a tfidf vectorizer for the track lyrics\n",
+    "    \"\"\"\n",
+    "    tfidf = TfidfVectorizer(tokenizer=str.split, min_df=min_df)\n",
+    "    # fit the TFIDF vectorizer\n",
+    "    tfidf.fit(lyric_df['lyric_raw'])\n",
+    "    return tfidf\n",
+    "\n",
+    "def lsi_lyrics(lyric_df, tfidf, num_concepts):\n",
+    "    \"\"\"\n",
+    "    fit an LSI object using the lyrics\n",
+    "    \"\"\"\n",
+    "    lyricTermMat = tfidf.transform(lyric_df['lyric_raw'])\n",
+    "    lsiObj = TruncatedSVD(n_components=num_concepts, random_state=15)\n",
+    "    lsiObj.fit(lyricTermMat)\n",
+    "    return lsiObj\n",
+    "\n",
+    "def create_lyric_vecs(lyric_df, lsiObj, tfidf):\n",
+    "    \"\"\" \n",
+    "    generate the lyric vectors in the concept space\n",
+    "    \"\"\"\n",
+    "    lyricTermMat = tfidf.transform(lyric_df['lyric_raw'])\n",
+    "    lyric_vecs = lsiObj.transform(lyricTermMat)\n",
+    "    return lyric_vecs\n",
+    "\n",
+    "def create_lyric_dictionary(lyric_df, lyric_vecs):\n",
+    "    \"\"\" \n",
+    "    input a lyric dataframe and lsi lyric vectors\n",
+    "    return a dictionary where the track id is the key\n",
+    "    the vector is the value\n",
+    "    \"\"\"\n",
+    "    # create a dataframe where the track id is the index the docVecs are the rows.\n",
+    "    track_vec_dict = defaultdict(list)\n",
+    "    track_ids = lyric_df['track_id'].values\n",
+    "    track_vec_dict = {track_ids[i]: lyric_vecs[i] for i in range(len(track_ids))}\n",
+    "    return track_vec_dict\n",
+    "\n",
+    "def lsi_on_query(lsiObj, user_query, tfidf):\n",
+    "    \"\"\" \n",
+    "    Transform the user search string into the concept space\n",
+    "    \"\"\"\n",
+    "    userVec = tfidf.transform([user_query])\n",
+    "    # convert query vec into the concept space\n",
+    "    userLsi = lsiObj.transform(userVec)\n",
+    "    return userLsi\n",
+    "\n",
+    "def retreive_30_tracks(lyric_df, userLsi, lyric_vecs):\n",
+    "    \"\"\" \n",
+    "    calculate cosine similarity between lyrics and user query\n",
+    "    return the top 30 in a dataframe.\n",
+    "    \"\"\"\n",
+    "    # calculate cosine similarity between every track and the lyric provided.\n",
+    "    simVals = cosine_similarity(lyric_vecs, userLsi)\n",
+    "    # create a track name, track id, artist name, similarity dataframe\n",
+    "    lyric_df['similarity'] = simVals\n",
+    "    user_playlist = lyric_df.sort_values(by='similarity', ascending=False)\n",
+    "    user_playlist = user_playlist.head(30)[['track_name', 'artist_name', 'track_id']]\n",
+    "    # initialize a feedback column and set every row to 0.\n",
+    "    user_playlist['feedback'] = 0\n",
+    "    return user_playlist\n",
+    "\n",
+    "def simulate_user_input(user_playlist):\n",
+    "    \"\"\" \n",
+    "    Simulate user input assign 0,1,2 to user feedback\n",
+    "    0 = nuetral\n",
+    "    1 = dislike\n",
+    "    2 = love\n",
+    "    \"\"\"\n",
+    "    feedback = [np.random.randint(0,3) for i in range(len(user_playlist))]\n",
+    "    user_playlist['feedback'] = feedback\n",
+    "    return user_playlist\n",
+    "\n",
+    "def rocchio_feedback(alpha, beta, gamma, phi, user_playlist, track_vec_dict):\n",
+    "    \"\"\" \n",
+    "    Rochhio Feedback Filtering\n",
+    "    1. Group user feeback by love, nuetral, dislike\n",
+    "    2. Calculate the mean for each group\n",
+    "    3. Apply alpha, beta, gamma, and phi to:\n",
+    "           Original search, loves, hates, nuetral\n",
+    "    4. Update the lyric search querry vector and return new results!\n",
+    "    return an updated query vector to improve search results\n",
+    "    \"\"\"\n",
+    "    # create a mean vector dict for all 3 states\n",
+    "    meanVectDict = defaultdict(list)\n",
+    "    # iterate through the three states nuetral[0], dislike[1], love[2]\n",
+    "    for i in range(3):\n",
+    "        temp_tracks = user_playlist[user_playlist['feedback']==i]\n",
+    "        if len(temp_tracks) > 0:\n",
+    "            # this means that tracks with this sentiment exist.\n",
+    "            # we can go get the track vectors from the track_vec_dict\n",
+    "            tempVecs = [track_vec_dict[vec] for vec in temp_tracks['track_id']]\n",
+    "            # next we need to calculate the mean vector for this segment\n",
+    "            meanVec = np.mean(tempVecs, axis=0)\n",
+    "            # add this mean to the mean vect dict. The key is the state.\n",
+    "            meanVectDict[i] = meanVec\n",
+    "        else:\n",
+    "            # if there are no tracks in this state, set its mean to 0\n",
+    "            meanVectDict[i] = 0\n",
+    "    # calcualte the new query vector by summing all of the mean vectors together\n",
+    "    newQueryVec = alpha*userLsi + beta * meanVectDict[2] - gamma * meanVectDict[1] + phi * meanVectDict[0]\n",
+    "    return newQueryVec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cardoni/Library/Python/3.8/lib/python/site-packages/sklearn/feature_extraction/text.py:516: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 6 integrate all functions into a loop\n",
+    "user_query =  'Jealousy, turning saints into the sea Swimming through sick lullabies Choking on your alibis'\n",
+    "# load in lyrics dataframe\n",
+    "lyric_df = load_lyrics_data()\n",
+    "# create a tfidf vectorizer object\n",
+    "tfidf = create_lyric_tfidf(lyric_df, 10)\n",
+    "# create a latent semantic indexing object\n",
+    "lsiObj = lsi_lyrics(lyric_df, tfidf, 100)\n",
+    "# convert the lyrics into content vectors\n",
+    "lyric_vecs = create_lyric_vecs(lyric_df, lsiObj, tfidf)\n",
+    "# create a dictionary mapping track id to content vector\n",
+    "track_vec_dict = create_lyric_dictionary(lyric_df, lyric_vecs)\n",
+    "# convert a user string query into the concept space\n",
+    "userLsi = lsi_on_query(lsiObj, user_query, tfidf)\n",
+    "# create a user playlist and return a dataframe\n",
+    "user_playlist = retreive_30_tracks(lyric_df, userLsi, lyric_vecs)\n",
+    "# simulate user input while we are not connected to the GUI\n",
+    "user_playlist = simulate_user_input(user_playlist)\n",
+    "# Apply rocchio feedback filter to generate a better query\n",
+    "rocchioSearch = rocchio_feedback(1.0, 0.75, 0.25, 0.5, user_playlist, track_vec_dict)\n",
+    "# generate a new user playlist with the updated search\n",
+    "user_playlist = retreive_30_tracks(lyric_df, rocchioSearch, lyric_vecs)\n",
+    "\n"
    ]
   }
  ],
