add large file parser and other minor changes

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -597,10 +597,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "subDFs = np.array_split(test_df,10)\n",
+    "file_counter = 0\n",
+    "for df in subDFs:\n",
+    "    #pickle.dump(test_df, open('clean_lyrics_dataframes/clean_english_tracks_df_'+str(file_counter)+'.p', 'wb'))\n",
+    "    file_counter += 1\n"
+   ]
   }
  ],
  "metadata": {
