--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 84502/84502 [12:02<00:00, 116.93it/s]\n"
+      "100%|██████████| 84502/84502 [13:14<00:00, 106.41it/s]\n"
      ]
     },
     {
@@ -186,7 +179,7 @@
        "         'bg': 1})"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,17 +190,18 @@
     "detect(test_text)\n",
     "lang_list = []\n",
     "for track in tqdm(test_df['raw_lyrics']):\n",
-    "    temp_lang = detect(track)\n",
-    "    lang_list.append(temp_lang)\n",
+    "    #temp_lang = detect(track)\n",
+    "    #lang_list.append(temp_lang)\n",
+    "    pass\n",
     "\n",
-    "Counter(lang_list)\n",
+    "#Counter(lang_list)\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -587,17 +581,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pickle.dump(track_vec_dict, open('lsi_vec_dict.p', 'wb'))\n",
-    "pickle.dump(test_df, open('clean_english_tracks_df.p', 'wb'))"
+    "#pickle.dump(test_df, open('clean_english_tracks_df.p', 'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
