--- a/user_interface/UI.ipynb
+++ b/user_interface/UI.ipynb
@@ -10,37 +10,34 @@
     "from tkinter.ttk import *\n",
     "import webbrowser\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "from tkinter import * \n",
+    "import tkinter.messagebox\n",
+    "from tkinter import ttk\n",
+    "import tkinterweb\n",
+    "from tkinterhtml import HtmlFrame\n",
+    "import tkinterweb\n",
+    "from IPython.display import Audio\n",
+    "from urllib.request import urlopen"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: spotipy in /opt/anaconda3/lib/python3.9/site-packages (2.20.0)\n",
-      "Requirement already satisfied: redis>=3.5.3 in /opt/anaconda3/lib/python3.9/site-packages (from spotipy) (4.3.4)\n",
-      "Requirement already satisfied: urllib3>=1.26.0 in /opt/anaconda3/lib/python3.9/site-packages (from spotipy) (1.26.9)\n",
-      "Requirement already satisfied: six>=1.15.0 in /opt/anaconda3/lib/python3.9/site-packages (from spotipy) (1.16.0)\n",
-      "Requirement already satisfied: requests>=2.25.0 in /opt/anaconda3/lib/python3.9/site-packages (from spotipy) (2.27.1)\n",
-      "Requirement already satisfied: packaging>=20.4 in /opt/anaconda3/lib/python3.9/site-packages (from redis>=3.5.3->spotipy) (21.3)\n",
-      "Requirement already satisfied: async-timeout>=4.0.2 in /opt/anaconda3/lib/python3.9/site-packages (from redis>=3.5.3->spotipy) (4.0.2)\n",
-      "Requirement already satisfied: deprecated>=1.2.3 in /opt/anaconda3/lib/python3.9/site-packages (from redis>=3.5.3->spotipy) (1.2.13)\n",
-      "Requirement already satisfied: wrapt<2,>=1.10 in /opt/anaconda3/lib/python3.9/site-packages (from deprecated>=1.2.3->redis>=3.5.3->spotipy) (1.12.1)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/anaconda3/lib/python3.9/site-packages (from packaging>=20.4->redis>=3.5.3->spotipy) (3.0.4)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/anaconda3/lib/python3.9/site-packages (from requests>=2.25.0->spotipy) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.9/site-packages (from requests>=2.25.0->spotipy) (3.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.9/site-packages (from requests>=2.25.0->spotipy) (2021.10.8)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install spotipy"
+    "#pip install spotipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install pydub"
    ]
   },
   {
@@ -51,13 +48,33 @@
    "source": [
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "import spotipy.util as util\n",
+    "\n",
     "cid = '3c72f1d18da74f63addd8423fd7d668f'\n",
     "secret = '447a83ea7f494680a9bf88a43db64548'\n",
     "client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
-    "sp = spotipy.Spotify(client_credentials_manager\n",
-    "=\n",
-    "client_credentials_manager)"
+    "#sp = spotipy.Spotify(client_credentials_manager = client_credentials_manager)\n",
+    "\n",
+    "#sp = spotipy.Spotify(auth_manager=spotipy.SpotifyOAuth(\n",
+    "token = util.prompt_for_user_token(\n",
+    "    username='12156878652',\n",
+    "    client_id = cid,\n",
+    "    client_secret = secret,\n",
+    "    redirect_uri = 'http://localhost:8000',\n",
+    "    scope=['user-modify-playback-state','user-read-playback-state']\n",
+    "    #'user-modify-playback-state'\n",
+    "    #['playlist-modify-public','user-read-currently-playing','user-read-playback-state']\n",
+    "    )\n",
+    "if token:\n",
+    "    sp = spotipy.Spotify(auth=token)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,16 +227,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import * \n",
-    "import tkinter.messagebox\n",
-    "from tkinter import ttk\n",
-    "               \n",
     "#Action for clicking Get Lyric button\n",
     "def reset():  \n",
     "    global track_df\n",
     "    global track_to_rate\n",
     "    global like_dislike_counter\n",
     "    \n",
+    "    sample_song_label.config(text=\"\")\n",
     "    #Once 10 songs have been rated, disable most buttons and allow user to view playlist\n",
     "    if like_dislike_counter == 10:\n",
     "        label.config(text=\"Track: \\nArtist: \") #, font=(\"Arial\",12))\n",
@@ -290,16 +304,27 @@
     "    listBox_lyrics.insert(\"\", \"end\", values=(track_to_rate.track_name_x.astype('str').item(), track_to_rate.artist_name_x.astype('str').item(), \"Dislike\")) \n",
     "    reset()\n",
     "    \n",
-    "def listen_to_track():\n",
+    "def listen_to_track():   \n",
     "    global track_to_rate\n",
+    "    global sample_song_label\n",
     "    track = track_to_rate.track_id.astype('str').item()\n",
     "    track = sp.track(track)\n",
     "    #print(track[\"preview_url\"])\n",
+    "    \n",
     "    try:\n",
     "        #webbrowser.open_new(r\"https://www.python.org\")\n",
     "        webbrowser.open_new(track[\"preview_url\"])\n",
+    "        sample_song_label.config(text=\"Song preview playing in new window\")\n",
     "    except:\n",
-    "        print(\"No URL\")\n",
+    "        sample_song_label.config(text=\"Song preview unavailable\")\n",
+    "    \n",
+    "    '''\n",
+    "    frame_listen = tkinterweb.HtmlFrame(frame1)\n",
+    "    frame_listen.load_website(track[\"preview_url\"]) \n",
+    "    print(track[\"preview_url\"])\n",
+    "    frame_listen.grid(row=1, column=1, pady=5, columnspan=3)\n",
+    "    '''\n",
+    "    #Audio(url=\"https://www.youtube.com/watch?v=5UMCrq-bBCg\", autoplay=True)\n",
     " \n",
     "# If you double click on a song in the display that was already rated, swap like / dislike\n",
     "def enable_edit(event):\n",
@@ -334,6 +359,7 @@
     "        listBox_playlist.insert(\"\", \"end\", values=(row.track_name_x, row.artist_name_x))\n",
     "    \n",
     "    b_playlist[\"state\"] = DISABLED\n",
+    "    b_export_playlist[\"state\"] = NORMAL\n",
     "    \n",
     "# Reset button \n",
     "def start_over():\n",
@@ -351,6 +377,7 @@
     "    b_dislike[\"state\"] = DISABLED\n",
     "    b_playlist[\"state\"] = DISABLED\n",
     "    b_startover[\"state\"] = DISABLED\n",
+    "    b_export_playlist[\"state\"] = DISABLED\n",
     "    \n",
     "    # Remove lyric\n",
     "    label.config(text=\"\")\n",
@@ -370,7 +397,21 @@
     "    listBox_lyrics.grid(row=1, column=0, sticky=\"ew\")\n",
     "    #listBox_lyrics.pack(side=\"left\", fill=BOTH, padx=5, pady=5)\n",
     "    reset()\n",
-    "    "
+    "    \n",
+    "def export_to_spotify():\n",
+    "    global sample_song_label\n",
+    "    for index, row in track_df.iterrows():\n",
+    "        try:\n",
+    "            sp.add_to_queue(row.track_id)\n",
+    "            sample_song_label.config(text=\"Songs have been added to your queue!\")\n",
+    "        except:\n",
+    "            sample_song_label.config(text=\"Unable to add to playlist. Note: Spotify Premium required\")\n",
+    "            break\n",
+    "    #sp.add_to_queue(\"13rC4iKtfQocWIfzPOJxaT\")\n",
+    "    b_export_playlist[\"state\"] = DISABLED\n",
+    "    \n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -413,7 +454,9 @@
     "\n",
     "# Display buttons to view playlist, start over, export playlist to spotify\n",
     "frame3.grid(row=5, column=0, sticky=\"ew\")\n",
-    "frame3.grid_columnconfigure((0,1,2,3), weight=1, uniform=\"column\")\n",
+    "#frame3.grid_columnconfigure((0,1,2,3), weight=1, uniform=\"column\")\n",
+    "#frame3.grid_columnconfigure((0,1,2,3), weight=1, uniform=\"column\")\n",
+    "\n",
     "\n",
     "# Add label to be used for displaying lyric\n",
     "label = Label(frame1, text = 'Track: ' + track_to_rate.track_name_x.astype('str').item() + '\\n' + 'Artist: ' + track_to_rate.artist_name_x.astype('str').item(), anchor='w', justify=LEFT) #, font=(\"Arial\",12))\n",
@@ -456,6 +499,9 @@
     "lyricBox = Text(frame0, height=2, width=40)\n",
     "lyricBox.grid(row=0, column=1, pady=5)\n",
     "\n",
+    "#testButton = Button(frame1, text=\"test\")\n",
+    "#testButton.grid(row=1, column=1, pady=5, columnspan=3)\n",
+    "\n",
     "# Create buttons (like, dislike, get lyrics, start over, view playlist)\n",
     "#b_like = Button(frame1, text = '   Like', image = tu_photoimage, compound = RIGHT, command=like, fg='green')\n",
     "#b_like = Button(frame1, text = 'Like', command=like, fg='green')\n",
@@ -479,12 +525,21 @@
     "tracker_label = Label(frame1, text = 'Tracks Rated: ' + str(\"{0:0=2d}\".format(like_dislike_counter)) + \"/10\")\n",
     "tracker_label.grid(row=2, column=0, sticky=\"nw\", padx=5, pady = 10)\n",
     "\n",
-    "# View playlist once 10 lyrics rated\n",
-    "b_playlist = Button(frame3, text = 'View Playlist', command=view_playlist)\n",
-    "b_playlist.grid(row=1, column=0, sticky=\"ew\", padx=3, pady=5)\n",
+    "# When play is clicked, dispaly message on where song will play \n",
+    "sample_song_label = Label(frame1, text = '')\n",
+    "sample_song_label.grid(row=1, column=1, sticky=\"nw\", padx=5, pady = 10, columnspan=3)\n",
+    "\n",
     "# Start over button to get back to original screen\n",
-    "b_startover = Button(frame3, text = 'Start Over', command=start_over)\n",
-    "b_startover.grid(row=1, column=1, sticky=\"ew\", padx=3, pady=5)\n",
+    "b_startover = Button(frame3, text = '        Start Over        ', command=start_over)\n",
+    "b_startover.grid(row=1, column=0, sticky=\"ew\", padx=3, pady=5)\n",
+    "\n",
+    "# View playlist once 10 lyrics rated\n",
+    "b_playlist = Button(frame3, text = '       View Playlist       ', command=view_playlist)\n",
+    "b_playlist.grid(row=1, column=1, sticky=\"ew\", padx=3, pady=5)\n",
+    "\n",
+    "# Export playlist to Spotify\n",
+    "b_export_playlist = Button(frame3, text = 'Add to Spotify Queue', command=export_to_spotify)\n",
+    "b_export_playlist.grid(row=1, column=2, sticky=\"ew\", padx=3, pady=5)\n",
     "\n",
     "# Store selection for likes and dislikes\n",
     "#data = []    \n",
@@ -494,11 +549,13 @@
     "#b_dislike[\"state\"] = DISABLED\n",
     "#b_startover[\"state\"] = DISABLED\n",
     "b_playlist[\"state\"] = DISABLED\n",
+    "b_export_playlist[\"state\"] = DISABLED\n",
     "\n",
     "# create table to show lyrics with rating and add a scrollbar\n",
     "cols = ('Track Name', \"Artist Name\", 'Rating')\n",
     "listBox_lyrics = ttk.Treeview(frame2, columns=cols, show='headings')\n",
     "vsb_lyrics = ttk.Scrollbar(frame2, orient=\"vertical\", command=listBox_lyrics.yview)\n",
+    "#doubleclicking changes like to dislike and vice versa\n",
     "listBox_lyrics.bind(\"<Double-1>\", enable_edit)\n",
     "\n",
     "for col in cols:\n",
@@ -525,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,6 +599,15 @@
     "#track = sp.track(track)\n",
     "#print(track)\n",
     "#print(track[\"preview_url\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sp.add_to_queue('69lfFTtbMuU99iZb67X9J7')"
    ]
   },
   {
