Store the necessary opperational data for the GUI in track_artist_id_df

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,67 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 84502/84502 [13:14<00:00, 106.41it/s]\n"
+      "100%|██████████| 84502/84502 [00:00<00:00, 555882.08it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'en': 75976,\n",
-       "         'pt': 238,\n",
-       "         'hr': 811,\n",
-       "         'tl': 291,\n",
-       "         'es': 1257,\n",
-       "         'sv': 1017,\n",
-       "         'de': 975,\n",
-       "         'nl': 599,\n",
-       "         'ca': 54,\n",
-       "         'mk': 14,\n",
-       "         'fr': 1210,\n",
-       "         'id': 112,\n",
-       "         'no': 314,\n",
-       "         'so': 67,\n",
-       "         'af': 26,\n",
-       "         'it': 127,\n",
-       "         'sl': 23,\n",
-       "         'ja': 198,\n",
-       "         'fi': 386,\n",
-       "         'tr': 65,\n",
-       "         'sq': 53,\n",
-       "         'cy': 22,\n",
-       "         'cs': 9,\n",
-       "         'sw': 74,\n",
-       "         'sk': 10,\n",
-       "         'da': 351,\n",
-       "         'zh-cn': 4,\n",
-       "         'lv': 4,\n",
-       "         'ru': 50,\n",
-       "         'pl': 47,\n",
-       "         'el': 4,\n",
-       "         'ro': 13,\n",
-       "         'et': 11,\n",
-       "         'hu': 12,\n",
-       "         'ko': 54,\n",
-       "         'ar': 1,\n",
-       "         'lt': 1,\n",
-       "         'he': 3,\n",
-       "         'vi': 4,\n",
-       "         'th': 8,\n",
-       "         'uk': 5,\n",
-       "         'hi': 1,\n",
-       "         'bg': 1})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -201,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,9 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['track_name_x', 'artist_name_x', 'lyric_raw'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/cardoni/napster_2/search_functionality/development.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# drop latin songs to avoid negatively impacting performance using 2 languages\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m lyric_df \u001b[39m=\u001b[39m lyric_df[lyric_df[\u001b[39m'\u001b[39m\u001b[39mgenre\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m!=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mlatin\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X14sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m lyric_df \u001b[39m=\u001b[39m lyric_df[[\u001b[39m'\u001b[39;49m\u001b[39mtrack_name_x\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39martist_name_x\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mtrack_id\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mlyric_raw\u001b[39;49m\u001b[39m'\u001b[39;49m]]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m lyric_df\u001b[39m.\u001b[39mrename(columns\u001b[39m=\u001b[39m{\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X14sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mtrack_name_x\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mtrack_name\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39martist_name_x\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39martist_name\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X14sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m }, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X14sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m lyric_df \u001b[39m=\u001b[39m lyric_df\u001b[39m.\u001b[39mdropna()\n",
+      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/core/frame.py:3511\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3509\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3510\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 3511\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[1;32m   3513\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3514\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
+      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/core/indexes/base.py:5782\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   5779\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   5780\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 5782\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   5784\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   5785\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   5786\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/core/indexes/base.py:5845\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   5842\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   5844\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[0;32m-> 5845\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['track_name_x', 'artist_name_x', 'lyric_raw'] not in index\""
+     ]
+    }
+   ],
    "source": [
     "# Tuning Parameters\n",
     "# minimum document frequency\n",
@@ -284,9 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'docTermMat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/cardoni/napster_2/search_functionality/development.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m lsiObj \u001b[39m=\u001b[39m TruncatedSVD(n_components\u001b[39m=\u001b[39mnum_concepts, random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m docVecs \u001b[39m=\u001b[39m lsiObj\u001b[39m.\u001b[39mfit_transform(docTermMat)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# create a dataframe where the track id is the index the docVecs are the rows.\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m track_vec_dict \u001b[39m=\u001b[39m defaultdict(\u001b[39mlist\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'docTermMat' is not defined"
+     ]
+    }
+   ],
    "source": [
     "lsiObj = TruncatedSVD(n_components=num_concepts, random_state=42)\n",
     "docVecs = lsiObj.fit_transform(docTermMat)\n",
@@ -299,9 +274,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vecObj' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/cardoni/napster_2/search_functionality/development.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m user_query \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mJealousy, turning saints into the sea Swimming through sick lullabies Choking on your alibis\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# vectorize\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m userVec \u001b[39m=\u001b[39m vecObj\u001b[39m.\u001b[39mtransform([user_query])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# convert query vec into the concept space\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cardoni/napster_2/search_functionality/development.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m userLsi \u001b[39m=\u001b[39m lsiObj\u001b[39m.\u001b[39mtransform(userVec)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'vecObj' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# part 2 convert the query into a vector in the concept space\n",
     "user_query = 'Jealousy, turning saints into the sea Swimming through sick lullabies Choking on your alibis'\n",
@@ -394,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,6 +465,7 @@
     "    # calculate cosine similarity between every track and the lyric provided.\n",
     "    simVals = cosine_similarity(lyric_vecs, userLsi)\n",
     "    # create a track name, track id, artist name, similarity dataframe\n",
+    "    # need to make this a copy so that we do not modify the already stored data\n",
     "    lyric_df['similarity'] = simVals\n",
     "    user_playlist = lyric_df.sort_values(by='similarity', ascending=False)\n",
     "    user_playlist = user_playlist.head(30)[['track_name', 'artist_name', 'track_id']]\n",
@@ -529,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -537,19 +525,7 @@
      "output_type": "stream",
      "text": [
       "/Users/cardoni/Library/Python/3.8/lib/python/site-packages/sklearn/feature_extraction/text.py:516: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
-      "  warnings.warn(\n",
-      "/var/folders/6r/kwmwk0wx4yj2ccxtwqdqgb4r0000gn/T/ipykernel_1463/690281095.py:81: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  lyric_df['similarity'] = simVals\n",
-      "/var/folders/6r/kwmwk0wx4yj2ccxtwqdqgb4r0000gn/T/ipykernel_1463/690281095.py:81: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  lyric_df['similarity'] = simVals\n"
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -581,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,15 +567,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75976, 3)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "subDFs = np.array_split(test_df,10)\n",
-    "file_counter = 0\n",
-    "for df in subDFs:\n",
-    "    #pickle.dump(test_df, open('clean_lyrics_dataframes/clean_english_tracks_df_'+str(file_counter)+'.p', 'wb'))\n",
-    "    file_counter += 1\n"
+    "test_df.shape\n",
+    "track_artist_id_df = test_df[['track_name', 'artist_name', 'track_id']]\n",
+    "track_artist_id_df.to_csv('track_artist_id_df')"
    ]
   }
  ],
