add spotify api features and search functionality

--- a/user_interface/UI.ipynb
+++ b/user_interface/UI.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,19 +237,25 @@
     "    #Once 10 songs have been rated, disable most buttons and allow user to view playlist\n",
     "    if like_dislike_counter == 10:\n",
     "        label.config(text=\"Track: \\nArtist: \") #, font=(\"Arial\",12))\n",
-    "        b_gettrack[\"state\"] = DISABLED\n",
     "        b_like[\"state\"] = DISABLED\n",
     "        b_dislike[\"state\"] = DISABLED\n",
+    "        b_neutral[\"state\"] = DISABLED\n",
+    "        b_listen[\"state\"] = DISABLED\n",
     "        b_playlist[\"state\"] = NORMAL\n",
     "    else:\n",
     "        #display a random track for now\n",
-    "        track_to_rate = track_df.sample(n=1,replace=True) #.track_id.astype('str').item()\n",
+    "        track_to_rate = track_df.sample(n=1,replace=True) \n",
+    "        #track_to_rate = track_df.iloc[like_dislike_counter] \n",
     "        label.config(text = 'Track: ' + track_to_rate.track_name_x.astype('str').item() + '\\n' + 'Artist: ' + track_to_rate.artist_name_x.astype('str').item())\n",
     "\n",
     "        if b_like[\"state\"] == DISABLED:\n",
     "            b_like[\"state\"] = NORMAL\n",
     "        if b_dislike[\"state\"] == DISABLED:\n",
     "            b_dislike[\"state\"] = NORMAL\n",
+    "        if b_neutral[\"state\"] == DISABLED:\n",
+    "            b_neutral[\"state\"] = NORMAL\n",
+    "        if b_listen[\"state\"] == DISABLED:\n",
+    "            b_listen[\"state\"] = NORMAL\n",
     "        if b_startover[\"state\"] == DISABLED:\n",
     "            b_startover[\"state\"] = NORMAL\n",
     "        #view_likes_dislikes()\n",
@@ -304,6 +310,15 @@
     "    listBox_lyrics.insert(\"\", \"end\", values=(track_to_rate.track_name_x.astype('str').item(), track_to_rate.artist_name_x.astype('str').item(), \"Dislike\")) \n",
     "    reset()\n",
     "    \n",
+    "# Action for clicking Neutral button: add to table at bottom of frame  \n",
+    "def neutral():  \n",
+    "    global like_dislike_counter\n",
+    "    global listBox_lyrics\n",
+    "    global track_to_rate\n",
+    "    like_dislike_count()\n",
+    "    listBox_lyrics.insert(\"\", \"end\", values=(track_to_rate.track_name_x.astype('str').item(), track_to_rate.artist_name_x.astype('str').item(), \"Neutral\")) \n",
+    "    reset()\n",
+    "    \n",
     "def listen_to_track():   \n",
     "    global track_to_rate\n",
     "    global sample_song_label\n",
@@ -331,6 +346,8 @@
     "    curItem = listBox_lyrics.focus()\n",
     "    curItem_values = listBox_lyrics.item(curItem)['values']\n",
     "    if curItem_values[2] == 'Like':\n",
+    "        new_rating = 'Neutral'\n",
+    "    elif curItem_values[2] == 'Neutral':\n",
     "        new_rating = 'Dislike'\n",
     "    else:\n",
     "        new_rating = 'Like'\n",
@@ -372,9 +389,6 @@
     "    like_dislike_count()\n",
     "    \n",
     "    # Reset buttons\n",
-    "    b_gettrack[\"state\"] = NORMAL\n",
-    "    b_like[\"state\"] = DISABLED\n",
-    "    b_dislike[\"state\"] = DISABLED\n",
     "    b_playlist[\"state\"] = DISABLED\n",
     "    b_startover[\"state\"] = DISABLED\n",
     "    b_export_playlist[\"state\"] = DISABLED\n",
@@ -396,6 +410,7 @@
     "    \n",
     "    listBox_lyrics.grid(row=1, column=0, sticky=\"ew\")\n",
     "    #listBox_lyrics.pack(side=\"left\", fill=BOTH, padx=5, pady=5)\n",
+    "    lyricSearch[\"state\"] = NORMAL\n",
     "    reset()\n",
     "    \n",
     "def export_to_spotify():\n",
@@ -409,16 +424,29 @@
     "            break\n",
     "    #sp.add_to_queue(\"13rC4iKtfQocWIfzPOJxaT\")\n",
     "    b_export_playlist[\"state\"] = DISABLED\n",
-    "    \n",
-    "        \n",
+    "\n",
+    "#Action for submitting lyric in search box\n",
+    "def lyric_processing():\n",
+    "    lyricText=lyricBox.get(\"1.0\",\"end-1c\")\n",
+    "    lyricSearch[\"state\"] = DISABLED\n",
+    "    print(lyricText)     \n",
+    "    reset()\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
    "source": [
     "# global variables\n",
     "# start with random lyric\n",
@@ -438,7 +466,7 @@
     "\n",
     "# Frame for get lyric, like, dislike\n",
     "frame0.grid(row=0, column=0, sticky=\"w\")\n",
-    "frame0.grid_columnconfigure((0,1,2,3), weight=1, uniform=\"column\")\n",
+    "frame0.grid_columnconfigure((0,1,2,3), weight=1) #, uniform=\"column\")\n",
     "\n",
     "# Frame for get lyric, like, dislike\n",
     "frame1.grid(row=1, column=0, sticky=\"w\")\n",
@@ -459,7 +487,8 @@
     "\n",
     "\n",
     "# Add label to be used for displaying lyric\n",
-    "label = Label(frame1, text = 'Track: ' + track_to_rate.track_name_x.astype('str').item() + '\\n' + 'Artist: ' + track_to_rate.artist_name_x.astype('str').item(), anchor='w', justify=LEFT) #, font=(\"Arial\",12))\n",
+    "#label = Label(frame1, text = 'Track: ' + track_to_rate.track_name_x.astype('str').item() + '\\n' + 'Artist: ' + track_to_rate.artist_name_x.astype('str').item(), anchor='w', justify=LEFT) #, font=(\"Arial\",12))\n",
+    "label = Label(frame1, text = 'Track: ' + '\\n' + 'Artist: ' , anchor='w', justify=LEFT) #, font=(\"Arial\",12))\n",
     "label.grid(row=0, column=0, sticky=\"nw\", padx=3, pady = 10, columnspan=4)\n",
     "\n",
     "# Add images to buttons\n",
@@ -496,27 +525,21 @@
     "logo_label.grid(row=0, column=0)\n",
     "\n",
     "#Add search bar\n",
-    "lyricBox = Text(frame0, height=2, width=40)\n",
+    "lyricBox = Text(frame0, height=2, width=32)\n",
     "lyricBox.grid(row=0, column=1, pady=5)\n",
     "\n",
-    "#testButton = Button(frame1, text=\"test\")\n",
-    "#testButton.grid(row=1, column=1, pady=5, columnspan=3)\n",
+    "lyricSearch = Button(frame0, text = 'Submit', command=lyric_processing)\n",
+    "lyricSearch.grid(row=0, column=2, sticky=\"ew\", padx=3, pady=5)\n",
     "\n",
     "# Create buttons (like, dislike, get lyrics, start over, view playlist)\n",
-    "#b_like = Button(frame1, text = '   Like', image = tu_photoimage, compound = RIGHT, command=like, fg='green')\n",
-    "#b_like = Button(frame1, text = 'Like', command=like, fg='green')\n",
     "b_like = Button(frame1b, image = tu_photoimage, compound = RIGHT, command=like)\n",
     "b_like.grid(row=1, column=0, padx=3, pady=5)\n",
     "\n",
-    "# b_dislike = Button(frame1, text = 'Dislike', image = td_photoimage, compound = RIGHT, command=dislike, fg='red')\n",
-    "#b_dislike = Button(frame1, text = 'Dislike', command=dislike, fg='red')\n",
     "b_dislike = Button(frame1b, image = td_photoimage, compound = RIGHT, command=dislike)\n",
     "b_dislike.grid(row=1, column=1, padx=3, pady=5)\n",
     "\n",
-    "# b_gettrack = Button(frame1, text = 'Get Lyric ', image = r_photoimage, compound = RIGHT, command=reset)\n",
-    "#b_gettrack = Button(frame1, text = 'Skip', command=reset)\n",
-    "b_gettrack = Button(frame1b, image = r_photoimage, compound = RIGHT, command=reset)\n",
-    "b_gettrack.grid(row=1, column=2, padx=2, pady=5)\n",
+    "b_neutral = Button(frame1b, image = r_photoimage, compound = RIGHT, command=neutral)\n",
+    "b_neutral.grid(row=1, column=2, padx=2, pady=5)\n",
     "\n",
     "b_listen = Button(frame1b, image = p_photoimage, compound = RIGHT, command=listen_to_track)\n",
     "b_listen.grid(row=1, column=3, padx=2, pady=5)\n",
@@ -525,7 +548,7 @@
     "tracker_label = Label(frame1, text = 'Tracks Rated: ' + str(\"{0:0=2d}\".format(like_dislike_counter)) + \"/10\")\n",
     "tracker_label.grid(row=2, column=0, sticky=\"nw\", padx=5, pady = 10)\n",
     "\n",
-    "# When play is clicked, dispaly message on where song will play \n",
+    "# When play is clicked, display message on where song will play \n",
     "sample_song_label = Label(frame1, text = '')\n",
     "sample_song_label.grid(row=1, column=1, sticky=\"nw\", padx=5, pady = 10, columnspan=3)\n",
     "\n",
@@ -545,9 +568,10 @@
     "#data = []    \n",
     "\n",
     "# Set original state for like and dislike buttons to disables\n",
-    "#b_like[\"state\"] = DISABLED\n",
-    "#b_dislike[\"state\"] = DISABLED\n",
-    "#b_startover[\"state\"] = DISABLED\n",
+    "b_like[\"state\"] = DISABLED\n",
+    "b_dislike[\"state\"] = DISABLED\n",
+    "b_neutral[\"state\"] = DISABLED\n",
+    "b_listen[\"state\"] = DISABLED\n",
     "b_playlist[\"state\"] = DISABLED\n",
     "b_export_playlist[\"state\"] = DISABLED\n",
     "\n",
@@ -575,7 +599,6 @@
     "\n",
     "for col in cols:\n",
     "    listBox_playlist.heading(col, text=col)\n",
-    "\n",
     "\n",
     "mainloop()\n"
    ]
@@ -608,6 +631,15 @@
    "outputs": [],
    "source": [
     "#sp.add_to_queue('69lfFTtbMuU99iZb67X9J7')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mainloop()"
    ]
   },
   {
